-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
6.4.0 Beta3
-
None
-
-
9a1051732d (qt/qtwebengine-chromium/102-based)
From the cmake log:
[ 72s] – Checking for modules 'libavcodec;libavformat;libavutil'
[ 72s] – Found libavcodec, version 58.134.100
[ 72s] – Found libavformat, version 58.76.100
[ 72s] – Found libavutil, version 56.70.100
(that's ffmpeg 4.4.2)
but the build fails with it:
[ 3079s] FAILED: obj/media/ffmpeg/ffmpeg/ffmpeg_common.o [ 3079s] /usr/bin/c++ -MMD -MF obj/media/ffmpeg/ffmpeg/ffmpeg_common.o.d -DUSE_UDEV -DUSE_AURA=1 -DUSE_OZONE=1 -DOFFICIAL_BUILD -DTOOLKIT_QT -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -DNO_UNWIND_TABLES -DNDEBUG -DNVALGRIND -DDYNAMIC_ANNOTATIONS_ENABLED=0 -DIS_MEDIA_IMPL -DUSE_PULSEAUDIO -DDLOPEN_PULSEAUDIO -DGL_GLEXT_PROTOTYPES -DUSE_GLX -DUSE_EGL -DVK_USE_PLATFORM_XCB_KHR -DSK_CODEC_DECODES_PNG -DSK_CODEC_DECODES_WEBP -DSK_ENCODE_PNG -DSK_ENCODE_WEBP -DSK_ENABLE_SKSL -DSK_UNTIL_CRBUG_1187654_IS_FIXED -DSK_USER_CONFIG_HEADER=\"../../skia/config/SkUserConfig.h\" -DSK_WIN_FONTMGR_NO_SIMULATIONS -DSK_GL -DSK_CODEC_DECODES_JPEG -DSK_ENCODE_JPEG -DSK_HAS_WUFFS_LIBRARY -DSK_VULKAN=1 -DSK_SUPPORT_GPU=1 -DSK_GPU_WORKAROUNDS_HEADER=\"gpu/config/gpu_driver_bug_workaround_autogen.h\" -DUSING_SYSTEM_ICU=1 -DICU_UTIL_DATA_IMPL=ICU_UTIL_DATA_STATIC -Igen -I../../../../../src/3rdparty/chromium -I../../../../../src/3rdparty/chromium/third_party/perfetto/include -Igen/third_party/perfetto/build_config -Igen/third_party/perfetto -I../../../../../src/3rdparty/chromium/third_party/khronos -I../../../../../src/3rdparty/chromium/gpu -I../../../../../src/3rdparty/chromium/third_party/vulkan-deps/vulkan-headers/src/include -Igen/third_party/dawn/include -I../../../../../src/3rdparty/chromium/third_party/dawn/include -I../../../../../src/3rdparty/chromium/third_party/dawn/src/include -I../../../../../src/3rdparty/chromium/third_party/libyuv/include -I../../../../../src/3rdparty/chromium/third_party/abseil-cpp -I../../../../../src/3rdparty/chromium/third_party/boringssl/src/include -I../../../../../src/3rdparty/chromium/third_party/protobuf/src -Igen/protoc_out -I../../../../../src/3rdparty/chromium/third_party/skia -I../../../../../src/3rdparty/chromium/third_party/wuffs/src/release/c -I../../../../../src/3rdparty/chromium/third_party/vulkan/include -I../../../../../src/3rdparty/chromium/third_party/mesa_headers -Wall -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -Wno-unused-local-typedefs -Wno-maybe-uninitialized -Wno-deprecated-declarations -fno-delete-null-pointer-checks -Wno-comments -Wno-packed-not-aligned -Wno-dangling-else -Wno-missing-field-initializers -Wno-unused-parameter -fno-ident -fno-strict-aliasing --param=ssp-buffer-size=4 -fstack-protector -Wno-unknown-pragmas -Wno-parentheses -Wno-sign-compare -Wno-stringop-overflow -Wno-stringop-overread -Wno-psabi -Wno-multichar -Wno-format-zero-length -fno-unwind-tables -fno-asynchronous-unwind-tables -fPIC -pipe -pthread -m64 -msse3 -O2 -fdata-sections -ffunction-sections -fno-omit-frame-pointer -gdwarf-4 -g1 -fvisibility=hidden -I/usr/include/ffmpeg -Wno-narrowing -Wno-class-memaccess -Wno-attributes -Wno-class-memaccess -Wno-subobject-linkage -Wno-invalid-offsetof -Wno-return-type -Wno-deprecated-copy -std=gnu++17 -fno-aligned-new -fno-exceptions -fno-rtti -fvisibility-inlines-hidden -c ../../../../../src/3rdparty/chromium/media/ffmpeg/ffmpeg_common.cc -o obj/media/ffmpeg/ffmpeg/ffmpeg_common.o [ 3079s] ../../../../../src/3rdparty/chromium/media/ffmpeg/ffmpeg_common.cc: In function 'bool media::AVCodecContextToAudioDecoderConfig(const AVCodecContext*, EncryptionScheme, AudioDecoderConfig*)': [ 3079s] ../../../../../src/3rdparty/chromium/media/ffmpeg/ffmpeg_common.cc:348:22: error: 'const AVCodecContext' {aka 'const struct AVCodecContext'} has no member named 'ch_layout'; did you mean 'channel_layout'? [ 3079s] 348 | codec_context->ch_layout.nb_channels > 8 [ 3079s] | ^~~~~~~~~ [ 3079s] | channel_layout [ 3079s] ../../../../../src/3rdparty/chromium/media/ffmpeg/ffmpeg_common.cc:351:32: error: 'const AVCodecContext' {aka 'const struct AVCodecContext'} has no member named 'ch_layout'; did you mean 'channel_layout'? [ 3079s] 351 | codec_context->ch_layout.u.mask, [ 3079s] | ^~~~~~~~~ [ 3079s] | channel_layout [ 3079s] ../../../../../src/3rdparty/chromium/media/ffmpeg/ffmpeg_common.cc:352:32: error: 'const AVCodecContext' {aka 'const struct AVCodecContext'} has no member named 'ch_layout'; did you mean 'channel_layout'? [ 3079s] 352 | codec_context->ch_layout.nb_channels); [ 3079s] | ^~~~~~~~~ [ 3079s] | channel_layout [ 3079s] ../../../../../src/3rdparty/chromium/media/ffmpeg/ffmpeg_common.cc:405:51: error: 'const AVCodecContext' {aka 'const struct AVCodecContext'} has no member named 'ch_layout'; did you mean 'channel_layout'? [ 3079s] 405 | config->SetChannelsForDiscrete(codec_context->ch_layout.nb_channels); [ 3079s] | ^~~~~~~~~ [ 3079s] | channel_layout [ 3079s] ../../../../../src/3rdparty/chromium/media/ffmpeg/ffmpeg_common.cc: In function 'void media::AudioDecoderConfigToAVCodecContext(const AudioDecoderConfig&, AVCodecContext*)': [ 3079s] ../../../../../src/3rdparty/chromium/media/ffmpeg/ffmpeg_common.cc:474:18: error: 'AVCodecContext' {aka 'struct AVCodecContext'} has no member named 'ch_layout'; did you mean 'channel_layout'? [ 3079s] 474 | codec_context->ch_layout.nb_channels = config.channels(); [ 3079s] | ^~~~~~~~~ [ 3079s] | channel_layout