Fix building with system ffmpeg 4.4 or 5.1

From Chrome 102, they added odd API not found upstream, so instead use
the standard API.

Patch originally by gerd.roethig@gmail.com

Change-Id: I1e65f02c1aa97575a90425a7ff4e28292219e20a
Fixes: QTBUG-105815
Reviewed-by: Michal Klocek <michal.klocek@qt.io>