chromium/media/cdm/library_cdm/clear_key_cdm/ffmpeg_cdm_audio_decoder.cc
@@ -74,7 +74,7 @@ void CdmAudioDecoderConfigToAVCodecContext(
       codec_context->sample_fmt = AV_SAMPLE_FMT_NONE;
   }
 
-  codec_context->ch_layout.nb_channels = config.channel_count;
+  codec_context->channels = config.channel_count;
   codec_context->sample_rate = config.samples_per_second;
 
   if (config.extra_data) {
@@ -124,8 +124,8 @@ void CopySamples(cdm::AudioFormat cdm_format,
     case cdm::kAudioFormatPlanarS16:
     case cdm::kAudioFormatPlanarF32: {
       const int decoded_size_per_channel =
-          decoded_audio_size / av_frame.ch_layout.nb_channels;
-      for (int i = 0; i < av_frame.ch_layout.nb_channels; ++i) {
+          decoded_audio_size / av_frame.channels;
+      for (int i = 0; i < av_frame.channels; ++i) {
         memcpy(output_buffer, av_frame.extended_data[i],
                decoded_size_per_channel);
         output_buffer += decoded_size_per_channel;
@@ -185,14 +185,13 @@ bool FFmpegCdmAudioDecoder::Initialize(
   // Success!
   decoding_loop_ = std::make_unique<FFmpegDecodingLoop>(codec_context_.get());
   samples_per_second_ = config.samples_per_second;
-  bytes_per_frame_ =
-      codec_context_->ch_layout.nb_channels * config.bits_per_channel / 8;
+  bytes_per_frame_ = codec_context_->channels * config.bits_per_channel / 8;
   output_timestamp_helper_ =
       std::make_unique<AudioTimestampHelper>(config.samples_per_second);
   is_initialized_ = true;
 
   // Store initial values to guard against midstream configuration changes.
-  channels_ = codec_context_->ch_layout.nb_channels;
+  channels_ = codec_context_->channels;
   av_sample_format_ = codec_context_->sample_fmt;
 
   return true;
@@ -292,9 +291,8 @@ cdm::Status FFmpegCdmAudioDecoder::DecodeBuffer(
   for (auto& frame : audio_frames) {
     int decoded_audio_size = 0;
     if (frame->sample_rate != samples_per_second_ ||
-        frame->ch_layout.nb_channels != channels_ ||
-        frame->format != av_sample_format_) {
-      DLOG(ERROR) << "Unsupported midstream configuration change!"
+    frame->channels != channels_ || frame->format != av_sample_format_) {
+        DLOG(ERROR) << "Unsupported midstream configuration change!"
                   << " Sample Rate: " << frame->sample_rate << " vs "
                   << samples_per_second_
                   << ", Channels: " << frame->ch_layout.nb_channels << " vs "
@@ -304,7 +302,7 @@ cdm::Status FFmpegCdmAudioDecoder::DecodeBuffer(
     }
 
     decoded_audio_size = av_samples_get_buffer_size(
-        nullptr, codec_context_->ch_layout.nb_channels, frame->nb_samples,
+        nullptr, codec_context_->channels, frame->nb_samples,
         codec_context_->sample_fmt, 1);
     if (!decoded_audio_size)
       continue;
@@ -324,7 +322,7 @@ bool FFmpegCdmAudioDecoder::OnNewFrame(
     std::vector<std::unique_ptr<AVFrame, ScopedPtrAVFreeFrame>>* audio_frames,
     AVFrame* frame) {
   *total_size += av_samples_get_buffer_size(
-      nullptr, codec_context_->ch_layout.nb_channels, frame->nb_samples,
+      nullptr, codec_context_->channels, frame->nb_samples,
       codec_context_->sample_fmt, 1);
   audio_frames->emplace_back(av_frame_clone(frame));
   return true;
